Isolate old Runge-Kutta routines with DoubleVector interface
Move them from numerics.h into liblegacy
Hide from numerics.h: DoubleVector dd(double x, const DoubleVector& y);

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -91,7 +91,7 @@ $(LIB@MODEL@_DEP) $(LIB@MODEL@_OBJ) $(DIR)/run_@MODEL@.o: CPPFLAGS += $(EIGENFLA
 $(LIB@MODEL@): $(LIB@MODEL@_OBJ)
 		$(MAKELIB) $@ $^
 
-$(RUN_@MODEL@_EXE): $(DIR)/run_@MODEL@.o $(LIB@MODEL@) $(LIBFLEXI)
+$(RUN_@MODEL@_EXE): $(DIR)/run_@MODEL@.o $(LIB@MODEL@) $(LIBFLEXI) $(LIBLEGACY)
 		$(CXX) -o $@ $^ $(GSLLIBS) $(FLIBS)
 
 ALLDEP += $(LIB@MODEL@_DEP)
