--- a/templates/softPars.hpp.in
+++ b/templates/softPars.hpp.in
@@ -29,10 +29,10 @@ public:
    @ModelName@_soft_parameters();
    @ModelName@_soft_parameters(const @ModelName@_susy_parameters& @cCtorParameterList@);
    virtual ~@ModelName@_soft_parameters() {}
-   virtual DoubleVector beta() const;
-   virtual const DoubleVector display() const;
+   virtual Eigen::ArrayXd beta() const;
+   virtual const Eigen::ArrayXd display() const;
    virtual void print(std::ostream&) const;
-   virtual void set(const DoubleVector&);
+   virtual void set(const Eigen::ArrayXd&);
 
    @ModelName@_soft_parameters calcBeta() const;
    virtual void clear();
