Set uninitialized parameters in the E6SSM.  This solves the convergence problem.

--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -41,6 +41,9 @@ BoundaryHighScale={
    {mXBar2, UNITMATRIX[3] m0^2},
    {mHdInert2, UNITMATRIX[2] m0^2},
    {mHuInert2, UNITMATRIX[2] m0^2},
+   {msInert2, UNITMATRIX[2] m0^2},
+   {mHPrime2, m0^2},
+   {mHBarPrime2, m0^2},
    {\[Kappa], UNITMATRIX[3] KappaInput},
    {\[Lambda], UNITMATRIX[2] LambdaInput},
    {\[Lambda]3, LambdaInput},
