--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -1,5 +1,5 @@
 
-#include "@ModelName@_lowScaleConstraint.hpp"
+#include "@ModelName@_low_scale_constraint.hpp"
 #include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
