--- a/templates/convergence_tester.cpp.in
+++ b/templates/convergence_tester.cpp.in
@@ -1,5 +1,5 @@
 
-#include "@ModelName@_convergenceTester.hpp"
+#include "@ModelName@_convergence_tester.hpp"
 #include <cmath>
 #include <algorithm>
 
