--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -1,6 +1,6 @@
 
-#include "@ModelName@_initialGuesser.hpp"
-#include "@ModelName@_highScaleConstraint.hpp"
+#include "@ModelName@_initial_guesser.hpp"
+#include "@ModelName@_high_scale_constraint.hpp"
 #include "@ModelName@_model.hpp"
 #include "lowe.h"
 #include "ew_input.hpp"
