--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -19,9 +19,9 @@
 #ifndef @ModelName@_H
 #define @ModelName@_H
 
-#include "@ModelName@_softPars.hpp"
+#include "@ModelName@_soft_parameters.hpp"
 #include "@ModelName@_physical.hpp"
-#include "@ModelName@_inputPars.hpp"
+#include "@ModelName@_input_parameters.hpp"
 #include "two_scale_model.hpp"
 
 #include <iosfwd>
