--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -1,10 +1,10 @@
 #include "@ModelName@_model.hpp"
-#include "@ModelName@_inputPars.hpp"
-#include "@ModelName@_highScaleConstraint.hpp"
-#include "@ModelName@_susyScaleConstraint.hpp"
-#include "@ModelName@_lowScaleConstraint.hpp"
-#include "@ModelName@_convergenceTester.hpp"
-#include "@ModelName@_initialGuesser.hpp"
+#include "@ModelName@_input_parameters.hpp"
+#include "@ModelName@_high_scale_constraint.hpp"
+#include "@ModelName@_susy_scale_constraint.hpp"
+#include "@ModelName@_low_scale_constraint.hpp"
+#include "@ModelName@_convergence_tester.hpp"
+#include "@ModelName@_initial_guesser.hpp"
 
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
