--- a/templates/soft_parameters.cpp.in
+++ b/templates/soft_parameters.cpp.in
@@ -16,69 +16,69 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
-#include "@ModelName@_susyPars.hpp"
+#include "@ModelName@_soft_parameters.hpp"
 #include "wrappers.hpp"
 
 #include <iostream>
 
-#define CLASSNAME @ModelName@_susy_parameters
-
-@ModelName@_susy_parameters::@ModelName@_susy_parameters()
-   : Beta_function()
+@ModelName@_soft_parameters::@ModelName@_soft_parameters()
+   : @ModelName@_susy_parameters()
    @parameterDefaultInit@
 {
    set_number_of_parameters(numberOfParameters);
 }
 
-@ModelName@_susy_parameters::@ModelName@_susy_parameters(
-   double scale_, double loops_, double thresholds_
+@ModelName@_soft_parameters::@ModelName@_soft_parameters(
+   const @ModelName@_susy_parameters& susy_model
    @cCtorParameterList@
 )
-   : Beta_function()
+   : @ModelName@_susy_parameters(susy_model)
    @parameterCopyInit@
 {
    set_number_of_parameters(numberOfParameters);
-   set_scale(scale_);
-   set_loops(loops_);
-   set_thresholds(thresholds_);
 }
 
-Eigen::ArrayXd @ModelName@_susy_parameters::beta() const
+Eigen::ArrayXd @ModelName@_soft_parameters::beta() const
 {
    return calc_beta().display();
 }
 
-@ModelName@_susy_parameters @ModelName@_susy_parameters::calc_beta() const
+@ModelName@_soft_parameters @ModelName@_soft_parameters::calc_beta() const
 {
 @beta@
 
-   return @ModelName@_susy_parameters(get_scale(), get_loops(), get_thresholds(),
-                    @betaParameterList@);
+   const @ModelName@_susy_parameters susy_betas(@ModelName@_susy_parameters::calc_beta());
+
+   return @ModelName@_soft_parameters(susy_betas, @betaParameterList@);
 }
 
-void @ModelName@_susy_parameters::clear()
+void @ModelName@_soft_parameters::clear()
 {
+   @ModelName@_susy_parameters::clear();
+
 @clearParameters@
 }
 
-@anomDimFunctions@
-
-const Eigen::ArrayXd @ModelName@_susy_parameters::display() const
+const Eigen::ArrayXd @ModelName@_soft_parameters::display() const
 {
-   Eigen::ArrayXd pars(numberOfParameters);
+   Eigen::ArrayXd pars(@ModelName@_susy_parameters::display());
+   pars.conservativeResize(numberOfParameters);
 
 @display@
 
    return pars;
 }
 
-void @ModelName@_susy_parameters::print(std::ostream& ostr) const
+void @ModelName@_soft_parameters::print(std::ostream& ostr) const
 {
-   ostr << "susy parameters:\n";
+   @ModelName@_susy_parameters::print(ostr);
+   ostr << "soft parameters:\n";
 @printParameters@
 }
 
-void @ModelName@_susy_parameters::set(const Eigen::ArrayXd& v)
+void @ModelName@_soft_parameters::set(const Eigen::ArrayXd& v)
 {
+   @ModelName@_susy_parameters::set(v);
+
 @set@
 }
