--- a/templates/susy_parameters.cpp.in
+++ b/templates/susy_parameters.cpp.in
@@ -82,3 +82,12 @@ void @ModelName@_susy_parameters::set(const Eigen::ArrayXd& v)
 {
 @set@
 }
+
+std::vector<std::string> @ModelName@_susy_parameters::get_parameter_names() const
+{
+   std::vector<std::string> names(@numberOfParameters@);
+
+@parameterNames@
+
+   return names;
+}
