--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -11,6 +11,7 @@ LIB@MODEL@_SRC += \
 		$(DIR)/@MODEL@_low_scale_constraint.cpp \
 		$(DIR)/@MODEL@_model.cpp \
 		$(DIR)/@MODEL@_physical.cpp \
+		$(DIR)/run_@MODEL@.cpp \
 		$(DIR)/@MODEL@_susy_parameters.cpp \
 		$(DIR)/@MODEL@_soft_parameters.cpp \
 		$(DIR)/@MODEL@_susy_scale_constraint.cpp
