--- a/templates/initial_guesser.hpp.in
+++ b/templates/initial_guesser.hpp.in
@@ -3,6 +3,9 @@
 #define @ModelName@_INITIAL_GUESSER_H
 
 #include "@ModelName@_input_parameters.hpp"
+#include "@ModelName@_low_scale_constraint.hpp"
+#include "@ModelName@_susy_scale_constraint.hpp"
+#include "@ModelName@_high_scale_constraint.hpp"
 #include "two_scale_initial_guesser.hpp"
 #include "error.hpp"
 
@@ -32,13 +35,16 @@ public:
       double scale;
    };
 
-   @ModelName@_initial_guesser(@ModelName@*, const @ModelName@_input_parameters&);
+   @ModelName@_initial_guesser(@ModelName@*, const @ModelName@_input_parameters&, @ModelName@_low_scale_constraint&, @ModelName@_susy_scale_constraint&, @ModelName@_high_scale_constraint&);
    virtual ~@ModelName@_initial_guesser();
    virtual void guess();
 
 private:
    @ModelName@* model;
    @ModelName@_input_parameters input_pars;
+   @ModelName@_low_scale_constraint low_constraint;
+   @ModelName@_susy_scale_constraint susy_constraint;
+   @ModelName@_high_scale_constraint high_constraint;
    double low_scale_guess;
    double high_scale_guess;
 
