--- a/templates/physical.cpp.in
+++ b/templates/physical.cpp.in
@@ -16,6 +16,8 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
+// File generated at @DateAndTime@
+
 #include "@ModelName@_physical.hpp"
 
 #include <iostream>
