--- a/templates/physical.hpp.in
+++ b/templates/physical.hpp.in
@@ -16,6 +16,8 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
+// File generated at @DateAndTime@
+
 #ifndef @ModelName@_physical_H
 #define @ModelName@_physical_H
 
