--- a/templates/soft_parameters.hpp.in
+++ b/templates/soft_parameters.hpp.in
@@ -16,6 +16,8 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
+// File generated at @DateAndTime@
+
 #ifndef @ModelName@_soft_parameters_H
 #define @ModelName@_soft_parameters_H
 
