--- a/templates/susy_parameters.hpp.in
+++ b/templates/susy_parameters.hpp.in
@@ -16,6 +16,8 @@
 // <http://www.gnu.org/licenses/>.
 // ====================================================================
 
+// File generated at @DateAndTime@
+
 #ifndef @ModelName@_susy_parameters_H
 #define @ModelName@_susy_parameters_H
 
