First implementation of sinThetaW in the DRbar scheme (using Denner Eq. (4.5.45)).

--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -72,9 +72,9 @@ BoundaryLowScaleInput={
 InitialGuess = {
    Sequence @@ BoundaryLowScaleInput,
    {vS, vSInput},
-   {mHd2, MZDRbar^2},
-   {mHu2, MZDRbar^2},
-   {ms2, MZDRbar^2},
-   {BmuPrime, MZDRbar^2},
-   {muPrime, MZDRbar}
+   {mHd2, MZ^2},
+   {mHu2, MZ^2},
+   {ms2, MZ^2},
+   {BmuPrime, MZ^2},
+   {muPrime, MZ}
 };
