--- a/templates/initial_guesser.cpp.in
+++ b/templates/initial_guesser.cpp.in
@@ -63,13 +63,13 @@ void @ModelName@_initial_guesser::guess()
 void @ModelName@_initial_guesser::guess_susy_parameters()
 {
    QedQcd leAtMt;
-   const double sinth2 = Electroweak_constants::sinthWsq;
+   const double sinThetaW2 = Electroweak_constants::sinThetaW2;
    const double mtpole = Electroweak_constants::PMTOP;
-   const double MZDRbar = Electroweak_constants::MZ;
-   const double MWDRbar = Electroweak_constants::MW;
+   const double MZ = Electroweak_constants::MZ;
+   const double MW = Electroweak_constants::MW;
 
    // guess gauge couplings at mt
-   const DoubleVector a(leAtMt.getGaugeMu(mtpole, sinth2));
+   const DoubleVector a(leAtMt.getGaugeMu(mtpole, sinThetaW2));
 
    model->set_@hyperchargeCoupling@(sqrt(4.0 * M_PI * a(1)));
    model->set_@leftCoupling@(sqrt(4.0 * M_PI * a(2)));
