--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -82,7 +82,16 @@ void @ModelName@_low_scale_constraint::update_scale()
 void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
 {
    const double currentScale = model->get_scale();
-   static const double oneOver16PiSqr = 1./(16. * M_PI * M_PI);
+   const double MZ = Electroweak_constants::MZ;
+   const double MW = Electroweak_constants::MW;
+   const double MZ2 = Sqr(MZ);
+   const double MW2 = Sqr(MW);
+
+   const double self_energy_VZ = Re(model->self_energy_VZ(MZ));
+   const double self_energy_VWm = Re(model->self_energy_VWm(MW));
+   const double sinThetaW2_drbar = SM(sinThetaW2) - SM(cosThetaW2) *
+      (self_energy_VWm / MW2 - self_energy_VZ / MZ2);
+   const double sinThetaW_drbar = Sqrt(sinThetaW2_drbar);
 
 @setDRbarGaugeCouplings@
 }
