--- a/templates/low_scale_constraint.cpp.in
+++ b/templates/low_scale_constraint.cpp.in
@@ -105,7 +105,7 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_yukawa_couplings()
    topDRbar(2,2)      = model->calculate_M@TopQuark@_DRbar_1loop(Electroweak_constants::PMTOP, 3);
    bottomDRbar(0,0)   = model->calculate_M@BottomQuark@_DRbar_1loop(Electroweak_constants::MDOWN, 1);
    bottomDRbar(1,1)   = model->calculate_M@BottomQuark@_DRbar_1loop(Electroweak_constants::MSTRANGE, 2);
-   bottomDRbar(2,2)   = model->calculate_M@BottomQuark@_DRbar_1loop(Electroweak_constants::PMBOTTOM, 3);
+   bottomDRbar(2,2)   = model->calculate_M@BottomQuark@_DRbar_1loop(Electroweak_constants::MBOTTOM, 3);
    electronDRbar(0,0) = model->calculate_M@Electron@_DRbar_1loop(Electroweak_constants::MELECTRON, 1);
    electronDRbar(1,1) = model->calculate_M@Electron@_DRbar_1loop(Electroweak_constants::MMUON, 2);
    electronDRbar(2,2) = model->calculate_M@Electron@_DRbar_1loop(Electroweak_constants::MTAU, 3);
