Make convergence tester independent of DoubleVector. Since the convergence test is so trivial, we can directly use a valarray<double>.

--- a/templates/convergence_tester.cpp.in
+++ b/templates/convergence_tester.cpp.in
@@ -21,6 +21,7 @@
 #include "@ModelName@_convergence_tester.hpp"
 #include <cmath>
 #include <algorithm>
+#include <valarray>
 
 #define OLD1(p) ol->get_##p()
 #define NEW1(p) ne->get_##p()
